--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       DATABASE_URL: postgresql://user:password@db:5432/daily_poo
       JWT_SECRET: your_secret_key_here
-      ALLOWED_ORIGINS: http://localhost:3000,http://localhost:5173
+      ALLOWED_ORIGINS: http://localhost:3000,http://localhost:5173,http://localhost:3001
       NODE_ENV: production
     depends_on:
       db:
